<resources>
    <string name="app_name">Mega Stock</string>
    <string name="title_activity_vendor_menu">VendorMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mega Stock</string>
    <string name="nav_header_subtitle">shahzadsaeedi086@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_orders">Orders</string>
    <string name="menu_add_products">Add Products</string>
    <string name="menu_products_list">Products List</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_user_menu">MainActivity</string>
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_cart">Cart</string>

    <string name="firebase_server_key">AAAA0ZAoaN8:APA91bH0m0qww_V5GduMDLnaaY_ZDnnCsXgY8_v1GXX4lfq0zsY47BWfF8cIcAJIwFHvrkP2j48dRaXzVcIwG565c5RT7TceOSeyb50DGzTlFbYsoC2FXQSIyNE4_lNwsb4pTcSYx9Ch</string>

    <string-array name="cities">
        <item>Lahore</item>
        <item>Karachi</item>
        <item>Faisalabad</item>
        <item>Serai</item>
        <item>Rawalpindi</item>
        <item>Multan</item>
        <item>Gujranwala</item>
        <item>Hyderabad</item>
        <item>Peshawar</item>
        <item>Abbottabad</item>
        <item>Islamabad</item>
        <item>Quetta</item>
        <item>Bannu</item>
        <item>Bahawalpur</item>
        <item>Sargodha</item>
        <item>Sialkot</item>
        <item>Sukkur</item>
        <item>Larkana</item>
        <item>Sheikhupura</item>
        <item>Mirpur Khas</item>
        <item>Rahimyar Khan</item>
        <item>Kohat</item>
        <item>Jhang Sadr</item>
        <item>Gujrat</item>
        <item>Bardar</item>
        <item>Kasur</item>
        <item>Dera Ghazi Khan</item>
        <item>Masiwala</item>
        <item>Nawabshah</item>
        <item>Okara</item>
        <item>Gilgit</item>
        <item>Chiniot</item>
        <item>Sadiqabad</item>
        <item>Turbat</item>
        <item>Dera Ismail Khan</item>
        <item>Chaman</item>
        <item>Zhob</item>
        <item>Mehra</item>
        <item>Parachinar</item>
        <item>Gwadar</item>
        <item>Kundian</item>
        <item>Shahdad Kot</item>
        <item>Haripur</item>
        <item>Matiari</item>
        <item>Dera Allahyar</item>
        <item>Lodhran</item>
        <item>Batgram</item>
        <item>Thatta</item>
        <item>Bagh</item>
        <item>Badin</item>
        <item>Mansehra</item>
        <item>Ziarat</item>
        <item>Muzaffargarh</item>
        <item>Tando Allahyar</item>
        <item>Dera Murad Jamali</item>
        <item>Karak</item>
        <item>Mardan</item>
        <item>Uthal</item>
        <item>Nankana Sahib</item>
        <item>Barkhan</item>
        <item>Hafizabad</item>
        <item>Kotli</item>
        <item>Loralai</item>
        <item>Dera Bugti</item>
        <item>Jhang </item>
        <item>Sahiwal</item>
        <item>Sanghar</item>
        <item>Pakpattan</item>
        <item>Chakwal</item>
        <item>Khushab</item>
        <item>Ghotki</item>
        <item>Kohlu</item>
        <item>Khuzdar</item>
        <item>Awaran</item>
        <item>Nowshera</item>
        <item>Charsadda</item>
        <item>Qila Abdullah</item>
        <item>Bahawalnagar</item>
        <item>Dadu</item>
        <item>Aliabad</item>
        <item>Lakki Marwat</item>
        <item>Chilas</item>
        <item>Pishin</item>
        <item>Tank</item>
        <item>Chitral</item>
        <item>Qila Saifullah</item>
        <item>Shikarpur</item>
        <item>Panjgur</item>
        <item>Mastung</item>
        <item>Kalat</item>
        <item>Gandava</item>
        <item>Khanewal</item>
        <item>Narowal</item>
        <item>Khairpur</item>
        <item>Malakand</item>
        <item>Vihari</item>
        <item>Saidu Sharif</item>
        <item>Jhelum</item>
        <item>Mandi Bahauddin</item>
        <item>Bhakkar</item>
        <item>Toba Tek Singh</item>
        <item>Jamshoro</item>
        <item>Kharan</item>
        <item>Umarkot</item>
        <item>Hangu</item>
        <item>Timargara</item>
        <item>Gakuch</item>
        <item>Jacobabad</item>
        <item>Alpurai</item>
        <item>Mianwali</item>
        <item>Musa Khel Bazar</item>
        <item>Naushahro Firoz</item>
        <item>New Mirpur</item>
        <item>Daggar</item>
        <item>Eidgah</item>
        <item>Sibi</item>
        <item>Dalbandin</item>
        <item>Rajanpur</item>
        <item>Leiah</item>
        <item>Upper Dir</item>
        <item>Tando Muhammad Khan</item>
        <item>Attock</item>
        <item>Rawala Kot</item>
        <item>Swabi</item>
        <item>Kandhkot</item>
        <item>Dasu</item>
        <item>Athmuqam</item>
    </string-array>

    <string-array name="categoryAdmin">
        <item>Fertilizers</item>
        <item>Pesticides</item>
        <item>Seeds</item>
    </string-array>

    <string-array name="unitAdmin">
        <item>kg</item>
        <item>litter</item>
        <item>milli litter</item>
        <item>gram</item>
        <item>milligram</item>
    </string-array>
</resources>